--- a/exopapers.bib
+++ b/exopapers.bib
@@ -390,6 +390,21 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Bastien14,
+   author = {{Bastien}, F.~A. and {Stassun}, K.~G. and {Pepper}, J.},
+    title = "{Larger Planet Radii Inferred from Stellar ''Flicker'' Brightness Variations of Bright Planet-host Stars}",
+  journal = {\apjl},
+ keywords = {planets and satellites: fundamental parameters, stars: fundamental parameters, techniques: photometric},
+     year = 2014,
+    month = jun,
+   volume = 788,
+      eid = {L9},
+    pages = {L9},
+      doi = {10.1088/2041-8205/788/1/L9},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...788L...9B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 @ARTICLE{Batalha13,
@@ -1608,6 +1623,25 @@ booktitle = {''The IRSA 2MASS All-Sky Point Source Catalog, NASA/IPAC Infrared S
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Davenport14,
+   author = {{Davenport}, J.~R.~A. and {Ivezi{\'c}}, {\v Z}. and {Becker}, A.~C. and 
+	{Ruan}, J.~J. and {Hunt-Walker}, N.~M. and {Covey}, K.~R. and 
+	{Lewis}, A.~R. and {AlSayyad}, Y. and {Anderson}, L.~M.},
+    title = "{The SDSS-2MASS-WISE 10-dimensional stellar colour locus}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1403.1875},
+ primaryClass = "astro-ph.SR",
+ keywords = {surveys, stars: fundamental parameters, stars: general, dust, extinction},
+     year = 2014,
+    month = jun,
+   volume = 440,
+    pages = {3430-3438},
+      doi = {10.1093/mnras/stu466},
+   adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.440.3430D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 
 @ARTICLE{Dawson12a,
@@ -2214,6 +2248,21 @@ archivePrefix = "arXiv",
     pages = {21},
       doi = {10.1088/0004-637X/745/1/21},
    adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...745...21F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fitzpatrick99,
+   author = {{Fitzpatrick}, E.~L.},
+    title = "{Correcting for the Effects of Interstellar Extinction}",
+  journal = {\pasp},
+   eprint = {astro-ph/9809387},
+ keywords = {ISM: DUST, EXTINCTION},
+     year = 1999,
+    month = jan,
+   volume = 111,
+    pages = {63-75},
+      doi = {10.1086/316293},
+   adsurl = {http://adsabs.harvard.edu/abs/1999PASP..111...63F},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
