--- a/table_fpp.tex
+++ b/table_fpp.tex
@@ -65,9 +65,9 @@ false positive scenarios, and the relative probability of
 each is listed in the appropriate column.  Planets previously 
 identified in the literature are marked as planets even if FPP is not 
 below 1\% threshold.}
-\tablenotetext{1}{Maximum depth of potential secondary eclipse signal.}
+\tablenotetext{1}{Maximum depth of potential secondary eclipse signal as described in \textsection \ref{sec:sec}.}
 \tablenotetext{2}{Whether adaptive optics observation is presented in this paper.}
-\tablenotetext{3}{Integrated planet occurrence rate assumed between 0.7$\times$ and 1.3$\times$ the candidate radius}
+\tablenotetext{3}{Integrated planet occurrence rate assumed between 0.7$\times$ and 1.3$\times$ the candidate radius.}
 \tablenotetext{a}{Despite low FPP, returned to candidate status 
 out of abundance of caution due to secondary star detection within or near photometric aperture.}
 \tablenotetext{b}{Declared a false positive due to noise modeling systematics (see \S\ref{sec:systematics}).}
