--- a/table_photometry.tex
+++ b/table_photometry.tex
@@ -7,17 +7,17 @@
 \tablecaption{Photometry for all Objects of Interest \label{Tab:Photometry}}
 \tablehead{
 \colhead{EPIC} &
-\colhead{$B_\textrm{APASS}$} &
-\colhead{$V_\textrm{APASS}$} &
-\colhead{$g_\textrm{APASS}$} &
-\colhead{$r_\textrm{APASS}$} &
-\colhead{$i_\textrm{APASS}$} &
-\colhead{$J_\textrm{2MASS}$} &
-\colhead{$H_\textrm{2MASS}$} &
-\colhead{$K_\textrm{2MASS}$} &
-\colhead{W1} &
-\colhead{W2} &
-\colhead{W3}
+\colhead{$B$\tablenotemark{1}} &
+\colhead{$V$\tablenotemark{1}} &
+\colhead{$g$\tablenotemark{1}} &
+\colhead{$r$\tablenotemark{1}} &
+\colhead{$i$\tablenotemark{1}} &
+\colhead{$J$\tablenotemark{2}} &
+\colhead{$H$\tablenotemark{2}} &
+\colhead{$K$\tablenotemark{2}} &
+\colhead{W1\tablenotemark{3}} &
+\colhead{W2\tablenotemark{3}} &
+\colhead{W3\tablenotemark{3}}
 }
 \startdata
 201208431 & $16.23 \pm 0.05$ & $14.91 \pm 0.03$ & $15.56 \pm 0.04$ & $14.29 \pm 0.07$ & $13.89 \pm 0.12$ & $12.37 \pm 0.02$ & $11.75 \pm 0.02$ & $11.57 \pm 0.02$ & $11.51 \pm 0.02$ & $11.55 \pm 0.02$ & $11.58 \pm 0.20$   \\
@@ -53,6 +53,10 @@
 201929294 & $14.32 \pm 0.04$ & $13.31 \pm 0.03$ & $13.78 \pm 0.05$ & $12.97 \pm 0.07$ & $12.61 \pm 0.09$ & $11.48 \pm 0.03$ & $10.98 \pm 0.02$ & $10.80 \pm 0.02$ & $10.73 \pm 0.02$ & $10.78 \pm 0.02$ & $10.67 \pm 0.10$
 \enddata
 %\tablecomments{}
+\tablenotetext{1}{Magnitude from the AAVSO Photometric All-Sky Survey (APASS) DR6 \citep{Henden14} 
+as reported in the UCAC4 Catalogue \citep{Zacharias12}.}
+\tablenotetext{2}{Magnitude from the 2MASS All-Sky Catalog of Point Sources \citep{Cutri03}.}
+\tablenotetext{3}{Magnitude from the ALLWise Data Release \citep{Cutri13}.}
 %\tablenotetext{$\dagger$}{previously undetected TTV signal.}
 %\label{Tab:Photometry}
 \end{deluxetable*}
