--- a/table_bg.tex
+++ b/table_bg.tex
@@ -6,14 +6,14 @@
 \tablecaption{Detected Companions to Candidate Host Stars \label{Tab:bg}}
 \tablehead{
 \colhead{Primary} &
-\colhead{Aperture} &
-\colhead{RA} &
-\colhead{Dec} &
-\colhead{Detection} &
-\colhead{Separation} &
-\colhead{$\Delta r$} &
-\colhead{Max Depth} &
-\colhead{Observed Depth} \\
+\colhead{Aperture\tablenotemark{1}} &
+\colhead{RA\tablenotemark{2}} &
+\colhead{Dec\tablenotemark{2}} &
+\colhead{Detection\tablenotemark{3}} &
+\colhead{Separation\tablenotemark{4}} &
+\colhead{$\Delta r$\tablenotemark{5}} &
+\colhead{Max Depth\tablenotemark{6}} &
+\colhead{Observed Depth\tablenotemark{7}} \\
 \colhead{} &
 \colhead{(arcsec)} &
 \colhead{(J2000)} &
@@ -25,39 +25,50 @@
 \colhead{(ppt)}
 }
 \startdata
- 201208431  & 15.9 & 174.748988  & -3.902146  &  SDSS  &       $17.25 \pm 0.15\tablenotemark{1}$  & $5.90 \pm 0.12$ & 5.6 & 1.20 \\
- 201257461  & 19.9 & 178.164376  & -3.093431  &  SDSS  &       $ 12.91 \pm 0.18\tablenotemark{1}$ & $5.04 \pm 0.03$ & 4.8 & 30.54 \\
- 201295312  & 11.9 &  174.010158  & -2.522528  &  SDSS/AO &  $8.12 \pm 0.09$\tablenotemark{1}   & $7.10 \pm 0.10$ & 0.8 & 0.30 \\
- 201338508  & 15.9 & 169.308176  & -1.873647  & SDSS      &    $22.92 \pm 0.07$\tablenotemark{1} & $4.35 \pm 0.03$ & 9.1 & 1.07 \\
+ 201208431  & 15.9 & 174.748988  & -3.902146  &  SDSS  &       $17.25 \pm 0.15\tablenotemark{b}$  & $5.90 \pm 0.12$ & 5.6 & 1.20 \\
+ 201257461  & 19.9 & 178.164376  & -3.093431  &  SDSS  &       $ 12.91 \pm 0.18\tablenotemark{b}$ & $5.04 \pm 0.03$ & 4.8 & 30.54 \\
+ 201295312  & 11.9 &  174.010158  & -2.522528  &  SDSS/AO &  $8.12 \pm 0.09$\tablenotemark{b}   & $7.10 \pm 0.10$ & 0.8 & 0.30 \\
+ 201338508  & 15.9 & 169.308176  & -1.873647  & SDSS      &    $22.92 \pm 0.07$\tablenotemark{b} & $4.35 \pm 0.03$ & 9.1 & 1.07 \\
  201367065  & 19.9 &                  &                       &                &                                                            &                          &          & 1.26  \\
- 201384232  & 13.9 & 178.195303 &  -1.192501  & SDSS      &   $24.14 \pm 0.06$\tablenotemark{1} & $5.93 \pm 0.03$ & 2.1 & 0.68 \\
+ 201384232  & 13.9 & 178.195303 &  -1.192501  & SDSS      &   $24.14 \pm 0.06$\tablenotemark{b} & $5.93 \pm 0.03$ & 2.1 & 0.68 \\
  201393098  & 15.9 &                  &                       &                &                                                           &                          &          & 0.53  \\
- 201403446  & 15.9 & 174.267663 &  -0.909645  & SDSS      &    $9.78 \pm 0.14$\tablenotemark{1} & $4.56 \pm 0.08$ & 7.5 & 0.23 \\ 
+ 201403446  & 15.9 & 174.267663 &  -0.909645  & SDSS      &    $9.78 \pm 0.14$\tablenotemark{b} & $4.56 \pm 0.08$ & 7.5 & 0.23 \\ 
  201445392  & 13.9 &                &                       &                &                                                           &                          &             & 0.78 \\
  201465501  & 11.9 &                 &                       &                &                                                           &                          &            & 2.83 \\
  201505350  & 19.9 &                  &                       &                &                                                           &                          &           & 2.64  \\
- 201546283  & 17.9 & 171.515265  &  1.229950  &  SDSS/AO &  $2.98 \pm 0.05$\tablenotemark{1}   & $5.87 \pm 0.06$ & 2.3 & 2.33 \\
- 201549860  & 13.9 & 170.097556 &  1.288007    & SDSS    &    $21.21 \pm 0.05$\tablenotemark{1} & $2.26 \pm 0.03$ & 62.3 & 0.80 \\
+ 201546283  & 17.9 & 171.515265  &  1.229950  &  SDSS/AO &  $2.98 \pm 0.05$\tablenotemark{a}   & $5.87 \pm 0.06$ & 2.3 & 2.33 \\
+ 201549860  & 13.9 & 170.097556 &  1.288007    & SDSS    &    $21.21 \pm 0.05$\tablenotemark{b} & $2.26 \pm 0.03$ & 62.3 & 0.80 \\
  201555883  & 10.0 &                 &                       &                &                                                           &                          &              & 3.50 \\
  201565013  & 10.0 &               &                       &                &                                                           &                          &                & 45.8    \\
  201569483  & 19.9 &                 &                       &                &                                                           &                          &              & 160  \\
- 201577035  & 19.9 & 172.118116 &  1.687798    & SDSS    &  $17.19 \pm 0.12$\tablenotemark{1}  & $5.40 \pm 0.03$ & 3.5    & 1.44  \\
+ 201577035  & 19.9 & 172.118116 &  1.687798    & SDSS    &  $17.19 \pm 0.12$\tablenotemark{b}  & $5.40 \pm 0.03$ & 3.5    & 1.44  \\
  201596316  & 15.9 &                 &                       &                &                                                           &                          &              & 0.70 \\
  201613023  & 19.9 &                 &                       &                &                                                           &                          &              & 0.42 \\
  201617985  & 15.9 &                 &                       &                &                                                           &                          &             & 1.10  \\
- 201629650  & 15.9 & 170.158905 &  2.502107   & SDSS     & $12.30 \pm 0.14$\tablenotemark{1} &   $5.98 \pm 0.06$ & 2.0   & 0.58 \\
+ 201629650  & 15.9 & 170.158905 &  2.502107   & SDSS     & $12.30 \pm 0.14$\tablenotemark{b} &   $5.98 \pm 0.06$ & 2.0   & 0.58 \\
  201635569  & 11.9 &                  &                       &                &                                                           &                          &            & 9.43 \\
  201649426  & 19.9 &                 &                       &                &                                                           &                          &             & 216   \\
- 201702477  & 10.0 & 175.238916 &  3.678764    & SDSS     &  $12.15 \pm 0.12$\tablenotemark{1} & $4.65 \pm 0.09$ & 6.9   & 6.70 \\
+ 201702477  & 10.0 & 175.238916 &  3.678764    & SDSS     &  $12.15 \pm 0.12$\tablenotemark{b} & $4.65 \pm 0.09$ & 6.9   & 6.70 \\
  201736247  & 13.9 &                  &                       &                &                                                           &                          &            & 1.21 \\
  201754305  & 11.9 &                  &                       &                &                                                           &                          &            & 0.80  \\
  201779067  & 19.9 &                  &                       &                &                                                           &                          &            & 84.9  \\
- 201828749  & 11.9 & 175.645724  &  5.894714  &   AO  &        $2.46 \pm 0.04$\tablenotemark{1}   & $ 2.0 \pm 0.1 $\tablenotemark{3} & 137 & 0.76  \\
+ 201828749  & 11.9 & 175.645724  &  5.894714  &   AO  &        $2.46 \pm 0.04$\tablenotemark{a}   & $ 2.0 \pm 0.1 $\tablenotemark{c} & 137 & 0.76  \\
  201855371  & 19.9 &                  &                       &                &                                                           &                          &            & 0.99   \\
  201912552  & 13.9 &                 &                       &                &                                                           &                          &             & 2.85   \\
  201929294  & 19.9 &                  &                       &                &                                                           &                          &            & 13.56 
 \enddata
-\tablenotetext{1}{Separation from AO imaging}
-\tablenotetext{2}{Separation from SDSS photometry}
-\tablenotetext{3}{$\Delta r$ inferred from $JHK$ relative photometry.}
+\tablenotetext{1}{Defined aperture used to create the \KT\ stellar light curve.}
+\tablenotetext{2}{Position of imaged companion.}
+\tablenotetext{3}{Dataset used to detect the imaged companion.}
+\tablenotetext{4}{Distance between the primary \KT\ target star and companion, in the dataset in which the
+companion is detected.}
+\tablenotetext{5}{Difference in $r$-band magnitude between the primary \KT\ target star and the companion.}
+\tablenotetext{6}{Observed ``transit'' depth if the imaged companion's flux were fully contained in the aperture and
+if it were an equal-mass eclipsing binary, leading to an eclipse depth of 50\%. This is the maximum possible false positive
+eclipse depth, as described in \textsection \ref{sec:background}.}
+\tablenotetext{7}{Observed transit depth in the \KT\ dataset. If larger than the "max depth," this transit event cannot
+be caused by eclipses of the background star.}
+\tablenotetext{a}{Separation from AO imaging}
+\tablenotetext{b}{Separation from SDSS photometry}
+\tablenotetext{c}{$\Delta r$ inferred from $JHK$ relative photometry.}
 \end{deluxetable*}
