--- a/exopapers.bib
+++ b/exopapers.bib
@@ -5332,6 +5332,41 @@ archivePrefix = "arXiv",
 }
 
 
+@ARTICLE{Schlafly11,
+   author = {{Schlafly}, E.~F. and {Finkbeiner}, D.~P.},
+    title = "{Measuring Reddening with Sloan Digital Sky Survey Stellar Spectra and Recalibrating SFD}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1012.4804},
+ primaryClass = "astro-ph.GA",
+ keywords = {dust, extinction, Galaxy: stellar content, ISM: clouds},
+     year = 2011,
+    month = aug,
+   volume = 737,
+      eid = {103},
+    pages = {103},
+      doi = {10.1088/0004-637X/737/2/103},
+   adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...737..103S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Schlegel98,
+   author = {{Schlegel}, D.~J. and {Finkbeiner}, D.~P. and {Davis}, M.},
+    title = "{Maps of Dust Infrared Emission for Use in Estimation of Reddening and Cosmic Microwave Background Radiation Foregrounds}",
+  journal = {\apj},
+   eprint = {astro-ph/9710327},
+ keywords = {COSMOLOGY: DIFFUSE RADIATION, COSMOLOGY: COSMIC MICROWAVE BACKGROUND, ISM: DUST, EXTINCTION, INTERPLANETARY MEDIUM, INFRARED: ISM: CONTINUUM, Cosmology: Cosmic Microwave Background, Cosmology: Diffuse Radiation, ISM: Dust, Extinction, Infrared: ISM: Continuum, Interplanetary Medium},
+     year = 1998,
+    month = jun,
+   volume = 500,
+    pages = {525-553},
+      doi = {10.1086/305772},
+   adsurl = {http://adsabs.harvard.edu/abs/1998ApJ...500..525S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 @ARTICLE{Scholz10,
    author = {{Scholz}, R.-D.},
