--- a/ms.tex
+++ b/ms.tex
@@ -1100,7 +1100,7 @@ conversations and suggestions which improved the quality of this manuscript.
 \change{We also thank Keivan Stassun (Vanderbilt) for his insights into 
  stellar parameters for both \kep\ and \KT, which significantly improved
  this work.
-We thank the anonymous referee for their insightful comments as well.}
+We thank the anonymous referee for their comments and suggestions.}
 
 We are grateful to the entire Kepler team, past and present.
 Their tireless efforts were all essential to the tremendous success of the mission and the
